# clox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clox  cmake_install.cmake  environment.h  interpreter
src/: environment.c  environment.h  interpreter.c  interpreter.h  main.c  parser.c  parser.h  scanner.c  scanner.h
test_files/: bugs.lox  control_flow.lox  evaluate_arith_isnumbers.lox  evaluate_arithmetic.lox  evaluate_relational.lox  evaluate_runtimeerror1.lox  evaluate_strcat.lox  foo.lox  interpret_simple.lox  run_simple.lox  run_variables.lox  unterminated_binary.lox  variables.lox
